--- a/app/src/main/res/layout/activity_pu_tong_tool_bar_translucent.xml
+++ b/app/src/main/res/layout/activity_pu_tong_tool_bar_translucent.xml
@@ -27,10 +27,21 @@
         android:layout_width="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_height="match_parent">
-        <TextView
-            android:text="@string/large_text"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+            <SeekBar
+                android:id="@+id/pu_tong_seek_bar"
+                android:max="255"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="@string/large_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
     </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
