drawerLayout问题有待修复

--- a/app/src/main/res/layout/activity_bo_he_translucent.xml
+++ b/app/src/main/res/layout/activity_bo_he_translucent.xml
@@ -7,20 +7,24 @@
     android:layout_height="match_parent"
     tools:context="com.alexleo.mytranslucentstatusbardemo.BoHeTranslucent">
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/bohe_toolbar"
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:minHeight="?android:actionBarSize"
-            android:paddingTop="@dimen/bohe_toolbar_padding_top"
-            app:theme="@style/Theme.AppCompat" />
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/bohe_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:minHeight="?android:actionBarSize"
+                android:paddingTop="@dimen/bohe_toolbar_padding_top"
+                app:layout_scrollFlags="enterAlways|scroll"
+                app:theme="@style/Theme.AppCompat" />
+        </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -32,7 +36,7 @@
                 android:layout_height="match_parent"
                 android:text="@string/scroll_str" />
         </android.support.v4.widget.NestedScrollView>
-    </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
     <LinearLayout
         android:layout_width="300dp"
