状态栏练习demo，其中包括两位大神博客的源码

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,11 @@
         android:text="fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/main_go_wangyi"
+        android:text="网易云音乐demo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 
