--- a/app/src/main/res/layout/activity_drawer_layout.xml
+++ b/app/src/main/res/layout/activity_drawer_layout.xml
@@ -12,6 +12,7 @@
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/drawer_act_coordinator"
         android:layout_width="match_parent"
+        android:background="@color/colorPrimary"
         android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
@@ -26,13 +27,13 @@
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
                 app:layout_scrollFlags="scroll"
-                android:fitsSystemWindows="true"
                 app:title="@string/app_name" />
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/drawer_act_tab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
                 android:scrollbars="horizontal"
                 app:tabMode="fixed">
 
@@ -41,6 +42,7 @@
 
 
         <android.support.v4.widget.NestedScrollView
+            android:background="@android:color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
