--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,5 +12,7 @@
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
     </style>
-    
+
+    <style name="MyyAppTheme" parent="NoActionBar"></style>
+
 </resources>
